--- a/css/variables.css
+++ b/css/variables.css
@@ -9,6 +9,7 @@
   --background-light: #FFFFFF;
   --background-grey: #EAEAEA;
   --background-grey-light: #F6F6F6;
+  --dark-grey:#353535;
 }
 
 /*# sourceMappingURL=variables.css.map */
