--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -12,5 +12,6 @@
     --background-light: #FFFFFF;
     --background-grey: #EAEAEA;
     --background-grey-light: #F6F6F6;
+    --dark-grey:#353535;
 
 }
