--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
   font-size: 1.6rem;
 }
 
+h1,
+h2 {
+  padding-bottom: 15px;
+}
+
 ul {
   list-style: none;
 }
@@ -27,8 +32,40 @@ img {
   max-width: 100%;
 }
 
-.header-logo {
+.intro__btn {
+  border: none;
+  background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
+  background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
+  background: linear-gradient(to top left, #9456dc, #ff79db);
+  padding: 18px 22px;
+  border-radius: 100px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  color: var(--text-light);
+  font-weight: bold;
+}
+
+.explaination__btn {
+  position: relative;
+  height: 75px;
+  width: 320px;
+  padding: 18px 30px;
+  border: none;
+  background: var(--background-grey);
+  border-radius: 10px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  color: var(--text);
+  font-weight: bold;
+  text-align: left;
+}
+.explaination__btn i {
+  padding-right: 20px;
+}
+
+.header {
   text-align: center;
+}
+
+.header-logo {
   padding: 22px 0 10px 0;
 }
 .header-logo__img {
@@ -39,7 +76,6 @@ img {
 .header-formular {
   background-color: var(--background-grey);
   padding: 15px 0;
-  text-align: center;
 }
 .header-formular__hiddenLabel {
   font: 0/0 a;
@@ -55,6 +91,41 @@ img {
 .header-formular__input::placeholder {
   color: var(--dark-grey);
   font-weight: bold;
+}
+
+.intro__exploration {
+  text-align: center;
+  background: var(--background-grey-light);
+  padding: 40px 47px;
+}
+.intro a {
+  display: inline-block;
+  padding: 30px 0 10px 0;
+}
+
+.explaination {
+  padding: 40px 20px;
+}
+.explaination__container {
+  text-align: center;
+}
+.explaination__container a {
+  display: inline-block;
+  padding: 20px 0;
+}
+.explaination__step {
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  left: -15px;
+  bottom: 22px;
+  background-color: var(--primary);
+  color: var(--text-light);
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
