--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,12 @@
 @import "reset";
 @import "generals";
+@import "buttons";
+
+.header {
+  text-align: center;
+}
 
 .header-logo {
-  text-align: center;
   padding: 22px 0 10px 0;
   &__img {
     height: 30px;
@@ -13,20 +17,57 @@
 .header-formular {
   background-color: var(--background-grey);
   padding: 15px 0;
-  text-align: center;
-  &__hiddenLabel{
+  &__hiddenLabel {
     font: 0/0 a;
   }
-  i{
+  i {
     color: var(--dark-grey);
   }
-  &__input{
+  &__input {
     border: none;
     background-color: var(--background-grey);
     padding-left: 10px;
   }
-  &__input::placeholder{
+  &__input::placeholder {
     color: var(--dark-grey);
     font-weight: bold;
+  }
+}
+
+.intro {
+  &__exploration {
+    text-align: center;
+    background: var(--background-grey-light);
+    padding: 40px 47px;
+  }
+  a {
+    display: inline-block;
+    padding: 30px 0 10px 0;
+  }
+}
+
+.explaination {
+  padding: 40px 20px;
+  &__container {
+    text-align: center;
+    a {
+      display: inline-block;
+      padding: 20px 0;
+    }
+  }
+  &__step {
+    position: absolute;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    left: -15px;
+    bottom: 22px;
+    background-color: var(--primary);
+    color: var(--text-light);
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+
   }
 }
