First step with mixin, add section restaurant and cards

--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -10,7 +10,10 @@ body {
 
 h1,
 h2 {
-  padding-bottom: 15px;
+  padding-bottom: 20px;
+}
+h3{
+  padding-bottom: 5px;
 }
 
 ul {
@@ -22,6 +25,3 @@ a {
   text-decoration: none;
 }
 
-img {
-  max-width: 100%;
-}
