--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,11 @@ body {
 
 h1,
 h2 {
-  padding-bottom: 15px;
+  padding-bottom: 20px;
+}
+
+h3 {
+  padding-bottom: 5px;
 }
 
 ul {
@@ -26,10 +30,6 @@ ul {
 a {
   color: var(--text-primary);
   text-decoration: none;
-}
-
-img {
-  max-width: 100%;
 }
 
 .intro__btn {
@@ -93,7 +93,6 @@ img {
 .header-formular__input {
   border: none;
   background-color: var(--backfround-secondary);
-  padding-left: 10px;
 }
 .header-formular__input::placeholder {
   color: var(--ico-secondary);
@@ -133,6 +132,39 @@ img {
   border-radius: 50%;
   height: 30px;
   width: 30px;
+}
+
+.restaurants {
+  padding: 47px 20px;
+}
+.restaurants__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.card {
+  background-color: var(--background-primary);
+  border-radius: 15px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+.card__link {
+  display: block;
+  background-color: var(--background-primary);
+  border-radius: 15px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+.card__img {
+  width: 100%;
+  height: 175px;
+  object-fit: cover;
+  border-radius: 15px 15px 0px 0px;
+}
+.card__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px 20px 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
