--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "generals";
 @import "buttons";
+@import "card";
 
 .header {
   text-align: center;
@@ -17,6 +18,7 @@
 .header-formular {
   background-color: var(--background-secondary);
   padding: 15px 0;
+
   &__hiddenLabel {
     font: 0/0 a;
   }
@@ -26,7 +28,6 @@
   &__input {
     border: none;
     background-color: var(--backfround-secondary);
-    padding-left: 10px;
   }
   &__input::placeholder {
     color: var(--ico-secondary);
@@ -51,8 +52,8 @@
   &__container {
     text-align: center;
     a {
-        display: block;
-        padding: 20px 0px 20px 15px;
+      display: block;
+      padding: 20px 0px 20px 15px;
     }
   }
   &__step {
@@ -68,6 +69,28 @@
     border-radius: 50%;
     height: 30px;
     width: 30px;
+  }
+}
 
+.restaurants{
+    padding: 47px 20px;
+    &__container{
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+    }
+}
+
+.card {
+  @include card-design;
+  &__link {
+    display: block;
+    @include card-design;
+  }
+  &__img {
+    @include restaurant-img-design;
+  }
+  &__description{
+    @include card-description-design;
   }
 }
