--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,14 +1,15 @@
-.intro__btn {
-  border: none;
-  background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
-  background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
-  background: linear-gradient(to top left, #9456dc, #ff79db);
-  padding: 18px 22px;
-  border-radius: 100px;
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-  color: var(--text-secondary);
-  font-weight: bold;
+@mixin primary-btn-design {
+    border: none;
+    background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
+    background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
+    background: linear-gradient(to top left, #9456dc, #ff79db);
+    padding: 18px 22px;
+    border-radius: 100px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    color: var(--text-secondary);
+    font-weight: bold;
 }
+
 
 .explaination {
   &__btn {
