Starting refacto fallowing the 7-1 model

--- a/scss/_generals.scss
+++ b/scss/_generals.scss
@@ -8,9 +8,11 @@ body {
   font-size: 1.6rem;
 }
 
-h1,
+h1{
+  padding-bottom: 15px;
+}
 h2 {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 h3{
   padding-bottom: 5px;
