--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -12,6 +12,7 @@
     --background-primary: #FFFFFF;
     --background-secondary: #EAEAEA;
     --background-tertiary: #F6F6F6;
+    --background-dark:#353535;
     --ico-secondary:#353535;
     --ico-primary:#7E7E7E;
     --active: #F5EDFF;
