--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,12 @@ body {
   font-size: 1.6rem;
 }
 
-h1,
+h1 {
+  padding-bottom: 15px;
+}
+
 h2 {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 h3 {
@@ -30,64 +33,6 @@ ul {
 a {
   color: var(--text-primary);
   text-decoration: none;
-}
-
-.explaination__btn {
-  position: relative;
-  height: 75px;
-  width: 100%;
-  padding: 18px 30px;
-  border: none;
-  background: var(--background-secondary);
-  border-radius: 10px;
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-  color: var(--text-primary);
-  font-weight: bold;
-  text-align: left;
-}
-.explaination__btn--active {
-  background: var(--active);
-}
-.explaination__ico {
-  padding-right: 20px;
-  color: var(--backfround-secondary);
-}
-.explaination__ico--active {
-  color: var(--primary);
-}
-
-.explaination {
-  padding: 40px 20px;
-}
-.explaination__container {
-  text-align: center;
-}
-.explaination__container a {
-  display: block;
-  padding: 20px 0px 20px 15px;
-}
-.explaination__step {
-  position: absolute;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  vertical-align: middle;
-  left: -15px;
-  bottom: 22px;
-  background-color: var(--primary);
-  color: var(--text-secondary);
-  border-radius: 50%;
-  height: 30px;
-  width: 30px;
-}
-
-.restaurants {
-  padding: 47px 20px;
-}
-.restaurants__container {
-  display: flex;
-  flex-direction: column;
-  row-gap: 30px;
 }
 
 .header {
@@ -140,25 +85,83 @@ a {
   font-weight: bold;
 }
 
-.card {
+.explaination {
+  padding: 47px 20px 60px 20px;
+}
+.explaination__stepContainer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  padding-left: 17px;
+}
+.explaination__stepButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px 0px;
+  border: none;
+  background: var(--background-secondary);
+  border-radius: 10px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  color: var(--text-primary);
+  font-weight: bold;
+  text-align: left;
+}
+.explaination__stepNumber {
+  margin-left: -17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary);
+  color: var(--text-secondary);
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+}
+.explaination__stepIcon {
+  padding: 0px 16px;
+}
+
+.restaurants {
+  padding: 47px 20px;
+  background-color: var(--background-tertiary);
+}
+.restaurants__containerCards {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+.restaurants__containerCards .card {
   background-color: var(--background-primary);
   border-radius: 15px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
-.card__link {
+.restaurants__containerCards .card__link {
   display: block;
 }
-.card__img {
+.restaurants__containerCards .card__img {
   width: 100%;
-  height: 175px;
+  height: 170px;
   object-fit: cover;
   border-radius: 15px 15px 0px 0px;
 }
-.card__description {
+.restaurants__containerCards .card__description {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 20px 20px 15px;
+  padding: 15px 20px 15px 20px;
+}
+
+.footer-content {
+  background-color: var(--background-dark);
+  color: var(--text-secondary);
+}
+.footer-content h2 {
+  font-family: var(--font-family__title);
+  font-size: 18px;
+}
+.footer-content nav a {
+  color: var(--text-secondary);
 }
 
 /*# sourceMappingURL=style.css.map */
