--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -10,13 +10,7 @@
     font-weight: bold;
 }
 
-
-.explaination {
-  &__btn {
-    position: relative;
-    height: 75px;
-    width: 100%;
-    padding: 18px 30px;
+@mixin secondary-btn-design {
     border: none;
     background: var(--background-secondary);
     border-radius: 10px;
@@ -24,15 +18,15 @@
     color: var(--text-primary);
     font-weight: bold;
     text-align: left;
-    &--active {
-      background: var(--active);
-    }
-  }
-  &__ico {
-    padding-right: 20px;
-    color: var(--backfround-secondary);
-    &--active {
-      color: var(--primary);
-    }
-  }
+}
+
+@mixin chip-design{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary);
+    color: var(--text-secondary);
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
 }
