--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -3,18 +3,15 @@
     border-radius: 15px;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
-
-@mixin restaurant-img-design{
+@mixin restaurant-imgCard-design{
     width: 100%;
-    height: 175px;
+    height: 170px;
     object-fit: cover;
     border-radius: 15px 15px 0px 0px;
 }
-@mixin card-description-design{
+@mixin card-descriptionCard-design{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 20px 20px 15px;
-
-
+    padding: 15px 20px 15px 20px;
 }
