--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,43 +1,7 @@
 @import "reset";
 @import "generals";
 @import "buttons";
-@import "card";
-
-.explaination {
-  padding: 40px 20px;
-  &__container {
-    text-align: center;
-    a {
-      display: block;
-      padding: 20px 0px 20px 15px;
-    }
-  }
-  &__step {
-    position: absolute;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-    left: -15px;
-    bottom: 22px;
-    background-color: var(--primary);
-    color: var(--text-secondary);
-    border-radius: 50%;
-    height: 30px;
-    width: 30px;
-  }
-}
-
-.restaurants {
-  padding: 47px 20px;
-  &__container {
-    display: flex;
-    flex-direction: column;
-    row-gap: 30px;
-  }
-}
-
-// code propre
+@import "cards";
 
 .header {
   text-align: center;
@@ -83,15 +47,60 @@
   }
 }
 
-.card {
-  @include card-design;
-  &__link {
-    display: block;
+.explaination {
+  padding: 47px 20px 60px 20px;
+  &__stepContainer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    padding-left: 17px;
   }
-  &__img {
-    @include restaurant-img-design;
+  &__stepButton {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px 0px;
+    @include secondary-btn-design;
   }
-  &__description {
-    @include card-description-design;
+  &__stepNumber {
+    margin-left: -17px;
+    @include chip-design;
   }
+  &__stepIcon {
+    padding: 0px 16px;
+  }
+}
+
+.restaurants {
+  padding: 47px 20px;
+  background-color: var(--background-tertiary);
+  &__containerCards {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    .card {
+      @include card-design;
+      &__link {
+        display: block;
+      }
+      &__img {
+        @include restaurant-imgCard-design;
+      }
+      &__description {
+        @include card-descriptionCard-design;
+      }
+    }
+  }
+}
+
+.footer-content {
+    background-color: var(--background-dark);
+    color: var(--text-secondary);
+    h2{
+        font-family: var(--font-family__title);
+        font-size: 18px;
+    }
+    nav a {
+        color: var(--text-secondary);
+    }
 }
