--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -30,3 +30,21 @@
     height: 30px;
     width: 30px;
 }
+
+@mixin card-design {
+    background-color: var(--background-primary);
+    border-radius: 15px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+@mixin restaurant-imgCard-design{
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+    border-radius: 15px 15px 0px 0px;
+}
+@mixin card-descriptionCard-design{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px 15px 20px;
+}
