--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -1,50 +1,52 @@
-@mixin primary-btn-design {
-    border: none;
+@mixin btn {
+  border: none;
+  padding: 18px 22px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  &--primary {
     background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
     background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
     background: linear-gradient(to top left, #9456dc, #ff79db);
-    padding: 18px 22px;
     border-radius: 100px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     color: var(--text-secondary);
-    font-weight: bold;
+  }
 }
 
-@mixin secondary-btn-design {
-    border: none;
-    background: var(--background-secondary);
-    border-radius: 10px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    color: var(--text-primary);
-    font-weight: bold;
-    text-align: left;
-}
+// @mixin secondary-btn-design {
+//   border: none;
+//   background: var(--background-secondary);
+//   border-radius: 10px;
+//   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+//   color: var(--text-primary);
+//   font-weight: bold;
+//   text-align: left;
+// }
 
-@mixin chip-design{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--primary);
-    color: var(--text-secondary);
-    border-radius: 50%;
-    height: 30px;
-    width: 30px;
-}
+// @mixin chip-design {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background-color: var(--primary);
+//   color: var(--text-secondary);
+//   border-radius: 50%;
+//   height: 30px;
+//   width: 30px;
+// }
 
-@mixin card-design {
-    background-color: var(--background-primary);
-    border-radius: 15px;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-}
-@mixin restaurant-imgCard-design{
-    width: 100%;
-    height: 170px;
-    object-fit: cover;
-    border-radius: 15px 15px 0px 0px;
-}
-@mixin card-descriptionCard-design{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px 15px 20px;
-}
+// @mixin card-design {
+//   background-color: var(--background-primary);
+//   border-radius: 15px;
+//   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+// }
+// @mixin restaurant-imgCard-design {
+//   width: 100%;
+//   height: 170px;
+//   object-fit: cover;
+//   border-radius: 15px 15px 0px 0px;
+// }
+// @mixin card-descriptionCard-design {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   padding: 15px 20px 15px 20px;
+// }
