--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,3 @@
-:root {
-  --font-family__title: "shrikhand", sans-serif;
-  --font-family__text: "roboto", sans-serif;
-  --primary: #9356dc;
-  --secondary: #ff79da;
-  --tertiary: #99e2d0;
-  --text-primary: #000000;
-  --text-secondary:#FFFFFF;
-  --background-primary: #FFFFFF;
-  --background-secondary: #EAEAEA;
-  --background-tertiary: #F6F6F6;
-  --background-dark:#353535;
-  --ico-secondary:#353535;
-  --ico-primary:#7E7E7E;
-  --active: #F5EDFF;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -26,17 +9,19 @@ html {
 }
 
 body {
-  font-family: var(--font-family__text);
-  color: var(--text-primary);
+  font-family: "roboto", sans-serif;
+  color: #000000;
   font-size: 1.6rem;
+  font-weight: 100;
 }
 
 h1 {
-  padding-bottom: 15px;
+  font-family: "roboto", sans-serif;
+  padding-bottom: 1.5rem;
 }
 
 h2 {
-  padding-bottom: 30px;
+  padding-bottom: 1rem;
 }
 
 h3 {
@@ -48,22 +33,31 @@ ul {
 }
 
 a {
-  color: var(--text-primary);
+  color: var(--color-black);
   text-decoration: none;
 }
 
 .btn {
   border: none;
-  padding: 18px 22px;
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  padding: 1.8rem 2.2rem;
+  box-shadow: 0rem 0.3rem 1.5rem rgba(0, 0, 0, 0.2);
   font-weight: bold;
+  cursor: pointer;
 }
 .btn--primary {
   background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
   background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
   background: linear-gradient(to top left, #9456dc, #ff79db);
-  border-radius: 100px;
-  color: var(--text-secondary);
+  border-radius: 10rem;
+  color: #ffffff;
+}
+.btn--step {
+  background-color: #f6f6f6;
+  border-radius: 2.5rem;
+  padding: 2.5rem;
+}
+.btn--step i {
+  padding-right: 2rem;
 }
 
 .header {
@@ -76,7 +70,7 @@ a {
 }
 
 .location-form {
-  background-color: var(--background-secondary);
+  background-color: #e9e9e9;
   padding: 15px 0;
   text-align: center;
 }
@@ -84,26 +78,33 @@ a {
   font: 0/0 a;
 }
 .location-form__label > i {
-  color: var(--ico-secondary);
+  color: #373737;
   padding-right: 10px;
 }
 .location-form__input {
   border: none;
-  background-color: var(--background-secondary);
+  background-color: #e9e9e9;
   width: 140px;
 }
 .location-form__input::placeholder {
-  color: var(--ico-secondary);
-  font-weight: bold;
+  color: #373737;
+  font-weight: 600;
 }
 
-.intro {
+.accueil-intro {
   text-align: center;
-  background: var(--background-tertiary);
+  background: #f6f6f6;
   padding: 40px 47px 55px 47px;
 }
-.intro__argument {
+.accueil-intro__argument {
   padding-bottom: 30px;
+}
+
+.explaination {
+  padding: 4rem 2rem 6rem 2rem;
+}
+.explaination__list > li {
+  margin: 2rem 0rem;
 }
 
 /*# sourceMappingURL=style.css.map */
