--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,25 @@ a {
   padding-right: 2rem;
 }
 
+.card {
+  background-color: var(--color-white);
+  border-radius: 1.5rem;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+}
+.card__img img {
+  width: 100%;
+  height: 17.5rem;
+  object-fit: cover;
+  object-position: 0% 61%;
+  border-radius: 1.5rem 1.5rem 0rem 0rem;
+}
+.card__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 2rem;
+}
+
 .header {
   text-align: center;
   padding: 22px 0px 10px 0px;
@@ -105,6 +124,28 @@ a {
 }
 .explaination__list > li {
   margin: 2rem 0rem;
+}
+
+.restaurants {
+  background-color: #f6f6f6;
+  padding: 4rem 2rem 6rem 2rem;
+}
+.restaurants__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 2rem;
+}
+
+.footer-content {
+  background-color: var(--background-dark);
+  color: var(--text-secondary);
+}
+.footer-content h2 {
+  font-family: var(--font-family__title);
+  font-size: 18px;
+}
+.footer-content nav a {
+  color: var(--text-secondary);
 }
 
 /*# sourceMappingURL=style.css.map */
