Starting menus pages

--- a/scss/Base/_base.scss
+++ b/scss/Base/_base.scss
@@ -1,4 +1,6 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,4 +9,9 @@
 html {
   // in order to change the default setting 16px by now 10px.
   font-size: 62.5%;
+}
+
+#text{
+  height: 0;
+  width: 0;
 }
