--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,24 +10,34 @@ html {
   font-size: 62.5%;
 }
 
+#text {
+  height: 0;
+  width: 0;
+}
+
 body {
   font-family: "roboto", sans-serif;
   color: #000000;
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   font-weight: 100;
 }
 
 h1 {
   font-family: "roboto", sans-serif;
+  font-size: 2.8rem;
   padding-bottom: 1.5rem;
 }
 
 h2 {
-  padding-bottom: 1rem;
+  font-size: 2.4rem;
+  padding-bottom: 2.5rem;
 }
 
 h3 {
-  padding-bottom: 5px;
+  font-family: "roboto", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding-bottom: 0.5rem;
 }
 
 ul {
@@ -33,8 +45,9 @@ ul {
 }
 
 a {
-  color: var(--color-black);
+  color: #000000;
   text-decoration: none;
+  font-size: 1.6rem;
 }
 
 .btn {
@@ -59,6 +72,12 @@ a {
 .btn--step i {
   padding-right: 2rem;
 }
+.btn--step:hover {
+  background-color: #f4eefc;
+}
+.btn--step:hover i {
+  color: #9356dc;
+}
 
 .card {
   background-color: var(--color-white);
@@ -77,6 +96,9 @@ a {
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
+}
+.card__footer i {
+  font-size: 2.5rem;
 }
 
 .header {
@@ -113,17 +135,17 @@ a {
 .accueil-intro {
   text-align: center;
   background: #f6f6f6;
-  padding: 40px 47px 55px 47px;
+  padding: 4rem 2rem 5.5rem 2rem;
 }
 .accueil-intro__argument {
-  padding-bottom: 30px;
+  padding-bottom: 3rem;
 }
 
 .explaination {
-  padding: 4rem 2rem 6rem 2rem;
+  padding: 5rem 2rem 5rem 2rem;
 }
 .explaination__list > li {
-  margin: 2rem 0rem;
+  margin-bottom: 2rem;
 }
 
 .restaurants {
@@ -137,15 +159,30 @@ a {
 }
 
 .footer-content {
-  background-color: var(--background-dark);
-  color: var(--text-secondary);
+  background-color: #373737;
+  color: #ffffff;
+  padding: 2.5rem 2rem;
 }
-.footer-content h2 {
-  font-family: var(--font-family__title);
-  font-size: 18px;
+.footer-content__heading {
+  font-family: "shrikhand", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  padding-bottom: 1.5rem;
 }
-.footer-content nav a {
-  color: var(--text-secondary);
+.footer-content__links {
+  list-style: none;
+}
+.footer-content__links a {
+  color: #ffffff;
+  font-weight: 400;
+  line-height: 2.5rem;
+}
+.footer-content__links i {
+  font-size: 1.5rem;
+  margin-right: 1rem;
+}
+.footer-content__links span {
+  margin-left: 0.6rem;
 }
 
 /*# sourceMappingURL=style.css.map */
