--- a/scss/Base/_typography.scss
+++ b/scss/Base/_typography.scss
@@ -1,19 +1,24 @@
 body {
   font-family: "roboto", sans-serif;
   color: $color-black;
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   font-weight: 100;
 }
 
 h1 {
   font-family: "roboto", sans-serif;
-  padding-bottom: 1.5rem;
+  font-size: 2.8rem;
+  padding-bottom:  1.5rem;
 }
 h2 {
-  padding-bottom: 1rem;
+  font-size: 2.4rem;
+  padding-bottom: 2.5rem;
 }
 h3 {
-  padding-bottom: 5px;
+  font-family: "roboto", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding-bottom: 0.5rem;
 }
 
 ul {
@@ -21,6 +26,7 @@ ul {
 }
 
 a {
-  color: var(--color-black);
+  color: $color-black;
   text-decoration: none;
+  font-size: 1.6rem;
 }
