--- a/scss/Layout/_intro-accueil.scss
+++ b/scss/Layout/_intro-accueil.scss
@@ -1,15 +1,15 @@
 .accueil-intro {
     text-align: center;
     background: $color-background;
-    padding: 40px 47px 55px 47px;
+    padding: 4rem 2rem 5.5rem 2rem;
     &__argument{
-      padding-bottom: 30px;
+      padding-bottom: 3rem;
     }
   }
 
   .explaination{
-    padding: 4rem 2rem 6rem 2rem;
-    &__list > li{
-      margin: 2rem 0rem;
+    padding: 5rem 2rem 5rem 2rem;
+    &__list  > li{
+      margin-bottom: 2rem;
     }
   }
