--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -18,18 +18,23 @@
     i {
       padding-right: 2rem;
     }
+    &:hover{
+      background-color: lighten($color-primary, $amount: 36%);
+      i{
+        color: $color-primary;
+      }
+    }
   }
 }
 
 @mixin card {
   @include card-frame;
-  &__img img{
+  &__img img {
     @include card-img;
   }
   &__footer {
     @include card-footer;
   }
-
 }
 
 @mixin card-frame {
@@ -51,7 +56,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
+  i{
+    font-size: 2.5rem;
+  }
 }
-
-
-
