--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -25,6 +25,28 @@
       }
     }
   }
+  &--dish{
+    background-color: $color-background;
+    border-radius: 1.5rem;
+    padding: 1.5rem 2.5rem 1.5rem 1rem;
+    font-weight: 100;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    span{
+      font-weight: 700;
+    }
+  }
+  &--order{
+    background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
+    background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
+    background: linear-gradient(to top left, #9456dc, #ff79db);
+    border-radius: 10rem;
+    color: $color-white;
+    padding: 1.7rem 5rem;
+    font-size: 1.5rem;
+  }
 }
 
 @mixin card {
