--- a/scss/Layout/_intro-menu.scss
+++ b/scss/Layout/_intro-menu.scss
@@ -1,6 +1,7 @@
 .restaurant-intro {
     background: red;
     &__img{
+        display: block;
         width: 100%;
         height: 26rem;
         object-fit: cover;
