--- a/css/style.css
+++ b/css/style.css
@@ -155,32 +155,6 @@ a {
   font-weight: 600;
 }
 
-.accueil-intro {
-  text-align: center;
-  background: #f6f6f6;
-  padding: 4rem 2rem 5.5rem 2rem;
-}
-.accueil-intro__argument {
-  padding-bottom: 3rem;
-}
-
-.explaination {
-  padding: 5rem 2rem 5rem 2rem;
-}
-.explaination__list > li {
-  margin-bottom: 2rem;
-}
-
-.restaurants {
-  background-color: #f6f6f6;
-  padding: 4rem 2rem 6rem 2rem;
-}
-.restaurants__grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  row-gap: 2rem;
-}
-
 .footer-content {
   background-color: #373737;
   color: #ffffff;
@@ -208,9 +182,32 @@ a {
   margin-left: 0.6rem;
 }
 
-.restaurant-intro {
-  background: red;
+.accueil-intro {
+  text-align: center;
+  background: #f6f6f6;
+  padding: 4rem 2rem 5.5rem 2rem;
 }
+.accueil-intro__argument {
+  padding-bottom: 3rem;
+}
+
+.explaination {
+  padding: 5rem 2rem 5rem 2rem;
+}
+.explaination__list > li {
+  margin-bottom: 2rem;
+}
+
+.restaurants {
+  background-color: #f6f6f6;
+  padding: 4rem 2rem 6rem 2rem;
+}
+.restaurants__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 2rem;
+}
+
 .restaurant-intro__img {
   display: block;
   width: 100%;
@@ -223,7 +220,7 @@ a {
   margin-top: -5rem;
   background-color: #f6f6f6;
   border-radius: 4.5rem 4.5rem 0rem 0rem;
-  padding: 4rem 1.5rem 6rem 1.5rem;
+  padding: 4rem 1.5rem;
 }
 .restaurant-menu__heading {
   font-family: "shrikhand";
