--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,9 @@
 @import "./Composants/buttons";
 @import "./Composants/cards";
 
-
+@import"./Layout/header";
+@import"./Layout/form";
+@import"./Layout/footer";
 
 @import "./Pages/accueil";
 @import "./Pages/menu";
