--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,15 +6,11 @@
 
 @import "./Composants/buttons";
 @import "./Composants/cards";
+@import"./Composants/bulletPoint";
 
-@import"./Layout/header";
-@import"./Layout/form";
-@import"./Layout/footer";
+@import "./Layout/header";
+@import "./Layout/form";
+@import "./Layout/footer";
 
 @import "./Pages/accueil";
 @import "./Pages/menu";
-
-
-
-
-
