--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -18,14 +18,14 @@
     i {
       padding-right: 2rem;
     }
-    &:hover{
+    &:hover {
       background-color: lighten($color-primary, $amount: 36%);
-      i{
+      i {
         color: $color-primary;
       }
     }
   }
-  &--dish{
+  &--dish {
     background-color: $color-background;
     border-radius: 1.5rem;
     padding: 1.5rem 2.5rem 1.5rem 1rem;
@@ -34,11 +34,11 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    span{
+    span {
       font-weight: 700;
     }
   }
-  &--order{
+  &--order {
     background: -webkit-linear-gradient(bottom right, #9456dc, #ff79db);
     background: -moz-linear-gradient(bottom right, #9456dc, #ff79db);
     background: linear-gradient(to top left, #9456dc, #ff79db);
@@ -50,7 +50,7 @@
 }
 
 @mixin card {
-  cursor:pointer; 
+  cursor: pointer;
   @include card-frame;
   &__img img {
     @include card-img;
@@ -79,7 +79,22 @@
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
-  i{
+  i {
     font-size: 2.5rem;
   }
+}
+
+@mixin bullet-point {
+  background-color: $color-primary;
+  color: $color-white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 1rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  border-radius: 5rem;
 }
